PWGPP-485, PWGPP-532 - adding requirenmnets for test and tutorials

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,6 @@ numpy
 scipy
 pandas
 anytree
-pytest
-nbval
 ##---------------------   graphics  dependencies
 bokeh
 matplotlib
@@ -21,3 +19,7 @@ scikit-garden
 forestci
 tensorflow
 keras
+# tests and tutorials
+pytest
+nbval
+nb-clean
