PWGPP-485, PWGPP-557- using bokeh <2.0

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ anytree
 ## root dependencies
 ## root_pandas
 ##---------------------   graphics  dependencies
-bokeh
+bokeh<2
 matplotlib
 plotly
 qgrid
