Python module request -> requests

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ beakerx
 # ----------------------   jupyter notebook dependencies
 ipywidgets
 runtime
-request
+requests
 # ---------------------    machine learning dependencies
 sklearn
 #scikit-garden
