making new release v0-01-04 adding depenndencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,9 @@ keras
 # tests and tutorials
 pytest
 nbval
+pytest_tornasync
+pytest-json-report
+pytest-regressions
+pytest-datadir
+pytest-parallel
+jq
