--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ uproot
 iminuit
 ## root_pandas
 ##---------------------   graphics  dependencies
-bokeh>2,<2.5
+bokeh>2,<2.5              # possibility to use new bokeh #150
 matplotlib
 plotly
 qgrid
