* Update dependencies to support Bokeh >= 3.3.2 and Python >= 3.9 * Adding pytest-xdist to development requirenment file

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ iminuit
 bokeh>=3              # possibility to use new bokeh #150
 # ----------------------   jupyter notebook dependencies
 ipywidgets
-runtime
+#runtime
 requests
 jupyter
 # ---------------------    machine learning dependencies
