Phase 0.1.A: Add test infrastructure and CAPABILITY_MATRIX generation
PURPOSE: Establish automated test coverage tracking for cross-backend validation

CHANGES:
- Add conftest.py: pytest markers, bokeh show()->save() for headless testing
- Add pytest.ini: test discovery, marker registration, parallel support
- Add run_tests.sh: unified test runner with -n 6 parallel, test_logs/<dir>_<date>/
- Add scripts/generate_capability_matrix.py: auto-generate coverage matrix
- Add feature_taxonomy.py: 15 trackable features (DSL, ENC, JOIN, HIST, ALIAS)
- Add @pytest.mark.feature markers to test_dsl_customjs.py

OUTPUT:
- test_logs/<dirname>_<timestamp>/report.json, test.log, summary.txt
- CAPABILITY_MATRIX.md/.json in bokeh/doc/

USAGE:
  ./run_tests.sh           # Run tests + generate matrix
  ./run_tests.sh -n 4      # 4 parallel workers
  ./run_tests.sh --quick   # Tests only
  ./run_tests.sh --matrix  # Matrix only

Implements Phase 0.1.A from PR #371 infrastructure planning.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,57 @@
-[pytest]
-markers =
-    unittest: description for unit test marker
-    slow: marks tests as slow
-    integration: marks tests as integration tests
+# pytest.ini — RootInteractive Test Configuration
+#
+# Phase: 0.1.A
+# Date: 2026-02-02
 
+[pytest]
+# Test discovery patterns
+python_files = test_*.py
+python_classes = Test*
+python_functions = test*
+
+# NOTE: We explicitly use test_* (with underscore) to avoid collecting
+# functions like testBokehClient0() which don't follow standard naming.
+# If you want to collect those too, change to: python_functions = test*
+
+# Ignore certain directories
+norecursedirs = 
+    .git
+    .tox
+    node_modules
+    files
+    build
+    dist
+    *.egg-info
+    __pycache__
+
+# Default options
+addopts = 
+    -v
+    --tb=short
+    --strict-markers
+
+# Markers (also registered in conftest.py, but good to have here too)
+markers =
+    feature(name): Feature ID from FEATURE_TAXONOMY
+    backend(name): Backend required (python, node, browser)
+    layer(name): Test layer (unit, integration, invariance, vector)
+    p0: Priority 0 - critical/blocking
+    p1: Priority 1 - important/required
+    p2: Priority 2 - nice to have
+    cross_backend: Test requires both Python and JavaScript execution
+    slow: Mark test as slow-running
+    regression(pr): Regression test for a specific PR
+    gui: Test creates GUI/visualization
+    unittest: Unit test marker (legacy)
+
+# Timeout for tests (requires pytest-timeout)
+# timeout = 300
+
+# Parallel execution (requires pytest-xdist)
+# Run with: pytest -n auto
+# Or specify workers: pytest -n 4
+
+# Filter warnings
+filterwarnings =
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
